--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -15,7 +15,15 @@
         android:layout_marginTop="40dp"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:text="Философские Пути" />
+        android:text="Персонажи" />
+
+    <Button
+        android:id="@+id/item_list_button"
+        android:layout_width="200dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:text="Отфильтровать" />
+
     <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/itemsList"
     android:layout_marginHorizontal="20dp"
