--- a/app/src/main/res/layout/item_in_list.xml
+++ b/app/src/main/res/layout/item_in_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:paddingBottom="20dp"
@@ -13,19 +14,28 @@
         android:layout_height="350dp"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/natasha" />
-
-    <TextView
-        android:id="@+id/item_list_title"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:text="TextView" />
+        android:orientation="horizontal"
+        android:gravity="center">
 
+        <TextView
+            android:id="@+id/item_list_title"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
+            android:text="TextView"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-
+        <ImageView
+            android:id="@+id/imageViewHe"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            tools:srcCompat="@drawable/he" />
+       </LinearLayout >
 
     <Button
         android:id="@+id/item_list_button"
