работает добавление в избранное

--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -22,6 +22,12 @@
         app:srcCompat="@drawable/kit" />
 
     <TextView
+        android:id="@+id/textViewLiked"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
         android:id="@+id/charName"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
